Add missing endpoints
